@@ -36,7 +36,7 @@
 <p>Camlp5 is a preprocessor-pretty-printer of OCaml.<br/>
 It is compatible with OCaml versions from 1.07 to 4.06.0.</p>
 
-<p>The current distributed version is <b>7.00</b> (released 2017-06-26).</p>
+<p>The current distributed version is <b>7.01</b> (released 2017-07-08).</p>
 
 <p>
 <a href="README.txt">README</a><br/>
@@ -54,12 +54,12 @@ It is compatible with OCaml versions from 1.07 to 4.06.0.</p>
 compile.</p>
 
 <p>Download the sources:
-  <a href="https://github.com/camlp5/camlp5/archive/rel700.tar.gz">camlp5-rel700.tar.gz</a>.</p>
+  <a href="https://github.com/camlp5/camlp5/archive/rel701.tar.gz">camlp5-rel700.tar.gz</a>.</p>
 
 
 <p>Browse the <a href="doc/htmlc/">documentation</a>.</p>
 
-<p>Or download the documentation:</p>
+<p>Or download the documentation (no change since 7.00):</p>
 
 <ul>
   <li>In dvi format:
